--- a/frontend/my-react-app/src/components/pages/GRCpage/GRC.css
+++ b/frontend/my-react-app/src/components/pages/GRCpage/GRC.css
@@ -238,6 +238,7 @@
   display: flex;
   flex-direction: column;
   animation: questionCardAppear 0.5s ease forwards;
+  font-family: 'Trebuchet MS';
 }
 
 @keyframes questionCardAppear {
@@ -284,7 +285,7 @@
 }
 
 .grc-question-text {
-  font-size: 17px;
+  font-size: 19px;
   line-height: 1.5;
   margin: 0 0 25px 0;
 }
@@ -305,7 +306,7 @@
   padding: 15px;
   color: var(--grc-text);
   font-family: inherit;
-  font-size: 15px;
+  font-size: 17px;
   cursor: pointer;
   transition: all 0.3s;
   text-align: left;
