--- a/frontend/my-react-app/src/components/pages/auth/Login.css
+++ b/frontend/my-react-app/src/components/pages/auth/Login.css
@@ -240,6 +240,7 @@
   font-family: inherit;
   font-size: 15px;
   transition: border-color 0.3s, box-shadow 0.3s;
+  font-family: 'Arial';
 }
 
 .login-input-wrapper input:focus {
