--- a/frontend/my-react-app/src/components/pages/Info/InfoPage.css
+++ b/frontend/my-react-app/src/components/pages/Info/InfoPage.css
@@ -417,7 +417,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: url('./images/6.webp') no-repeat center center;
+  background: url('./images/leader.webp') no-repeat center center;
   background-size: cover;
   filter: brightness(0.6) blur(1px);
   z-index: 0;
